test/case/parser/enclosing-not-nested.txt

PARSE ERROR: Enclosing view blocks can't be nested

---

<div>
    within(x) {
        ^{ ^{} }
    }
</div>

---

Error at line 3 character 12: Enclosing view blocks may not contain other enclosing view blocks
